--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,11 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Buscador de CEP</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.2.0/remixicon.css"
+    />
+    <title>Meu Portfólio Pessoal</title>
   </head>
   <body>
     <noscript>Você precisa habilitar o JavaScript para acessar o site.</noscript>
