Revert "Meu portfólio pessoal"
This reverts commit 3a2baa9f0a87676aa5a22dbe8cab936d7b4e78d0.

--- a/public/index.html
+++ b/public/index.html
@@ -24,11 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.2.0/remixicon.css"
-    />
-    <title>Meu Portfólio Pessoal</title>
+    <title>Buscador de CEP</title>
   </head>
   <body>
     <noscript>Você precisa habilitar o JavaScript para acessar o site.</noscript>
